[project]
name = "test-system-notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5.3",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]
